feat: Delete all message of deleted room
- Add method to delete chat messages for a specific room
- Refactor participant removal logic in WebRTCService
- Optimize stream collection method using toList()
- Improve handling of empty chat rooms and participant removal